--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -4,29 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/home/login.css">
+    <link rel="stylesheet" href="/css/home/login2.css">
     <script src="/js/home/login.js" defer></script>
     <title>Document</title>
 </head>
 <body>
-    <div class="login-page">
-        <div class="form">
-          <!-- <form class="register-form">
-            <input type="text" placeholder="name"/>
-            <input type="password" placeholder="password"/>
-            <input type="text" placeholder="email address"/>
-            <button>create</button>
-            <p class="message">Already registered? <a href="#">Sign In</a></p>
-          </form> -->
-          <form class="login-form">
-            <input id="id"type="text" placeholder="아이디"/>
-            <input id="psword"type="password" placeholder="비밀번호"/>
-            <p id="button">login</p>
-            <p class="message">Not registered? <a href="/register">Create an account</a></p>
-          </form>
-        </div>
+    <div class="login-box">
+        <h2>Login</h2>
+        <form>
+          <div class="user-box">
+            <input id="id"type="text" name="" required=""/>
+            <label>ID</label>
+          </div>
+          <div class="user-box">
+            <input id="psword"type="password" name="" required=""/>
+            <label>Password</label>
+          </div>
+          <p id="button"style='cursor:pointer;'>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            login
+          </p>
+          <p class="message">Not registered? <a href="/register">Create an account</a></p>
+        </form>
       </div>
 </body>
 </html>
-
-<!-- Copyright (c) 2022 by Aigars Silkalns (https://codepen.io/colorlib/pen/rxddKy) -->
+<!-- Copyright (c) 2022 by Soufiane Khalfaoui HaSsani (https://codepen.io/soufiane-khalfaoui-hassani/pen/LYpPWda) -->
