--- a/app/src/views/home/register.ejs
+++ b/app/src/views/home/register.ejs
@@ -4,24 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/home/login.css">
-    <script src="/js/home/register.js" defer></script>  <!-- register.js랑 연결-->
+    <link rel="stylesheet" href="/css/home/login2.css">
+    <script src="/js/home/register.js" defer></script>
     <title>Document</title>
 </head>
 <body>
-    <div class="login-page">
-        <div class="form">
-          <form class="login-form">
-            <input id="id"type="text" placeholder="아이디"/>
-            <input id="name"type="text" placeholder="이름"/>
-            <input id="psword"type="password" placeholder="비밀번호"/>
-            <input id="confirm-psword"type="password" placeholder="비밀번호 확인"/> <!--공백표시는 - 으로 표시 -->
-            <p id="button">SIGN UP</p>  <!--button을 감싸고있는 테그가 form 태그라서 그럼. form태그는 form안에 있는 버튼을 써브밋 해주는 기능을 갖고있기 때문에 누를때마다 리로드 됨. 따라서 버튼테그를 p태그로 바꿔야함.-->
-            <p class="message">Already registered? <a href="/login">login</a></p>
-          </form>
-        </div>
-      </div> 
-</body>
-</html>
-
-<!-- Copyright (c) 2022 by Aigars Silkalns (https://codepen.io/colorlib/pen/rxddKy) -->
+    <div class="login-box">
+        <h2>Login</h2>
+        <form>
+          <div class="user-box">
+            <input id="id"type="text" name="" required=""/>
+            <label>ID</label>
+          </div>
+          <div class="user-box">
+            <input id="name"type="text" name="" required=""/>
+            <label>Username</label>
+          </div>
+          <div class="user-box">
+            <input id="psword"type="password" name="" required=""/>
+            <label>Password</label>
+          </div>
+          <div class="user-box">
+            <input id="confirm-psword"type="password" name="" required=""/>
+            <label>Confirm Password</label>
+          </div>
+          <p id="button"style='cursor:pointer;'>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            SIGN UP
+          </p>
+          <p class="message">
+            Already registered? 
+            <a href="/login">
+              login
+            </a>
+          </p>
+        </form>
+      </div>
+  </body>
+</htm>
+<!-- Copyright (c) 2022 by Soufiane Khalfaoui HaSsani (https://codepen.io/soufiane-khalfaoui-hassani/pen/LYpPWda) -->
